--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-
+streamlit>=1.28.0
 transformers>=4.41.0
 torch>=2.2.0
-pandas>=2.2.1
-numpy>=1.26.4
-scikit-learn>=1.4.2
-jupyter>=1.0.0
-safetensors>=0.4.2
-sentencepiece>=0.1.99
